# Connrot

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  build_android0207.sh
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerPorxy.cpp  IPlayerPorxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  JavaListener.cpp  SLAudioPlay.cpp  SLAudioPlay.h  VideoDecodeFfmpegDemo.cpp  VideoDecodeFfmpegDemo.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  (+7 more)
app/src/main/cpp/ThreadDemo/: AndroidLog.h  AndroidLogHelp.cpp  AndroidLogHelp.h  JavaListener.h
app/src/main/cpp/ffmpeg/: VideoEncoder.cpp  convert.cpp  encode_mp4.cpp
app/src/main/java/com/example/ShikeApplication/: MainActivity.java  coreApplication.java
app/src/main/java/com/example/ShikeApplication/Media/: AuidoRawChannelBuffer.java  Encoder.java  EncoderTypicalMode.java
app/src/main/java/com/example/ShikeApplication/NPaly/: XPlayJavaSurfaceView.java  XPlaySurfaceView.kt
app/src/main/java/com/example/ShikeApplication/YuvImage/: GLProgram.java  GLSurface.java  MyGLRender.java
app/src/main/java/com/example/ShikeApplication/activity/: BaseActivity.java  FlashLinearLayoutActivity.java  MainActivity.java  OpenGLESSampleActivity.java  RemotaActivity.java  ResoundActivity.java  SplashActivity.java  VideoPlayActivity.kt  YuvImageActivity.kt
app/src/main/java/com/example/ShikeApplication/audioProcess/: AudioClass.java  AudioInputThread.java  AudioOutputThread.java  AudioStrategy.java  HanderBean.java  ThreadEnum.java
app/src/main/java/com/example/ShikeApplication/bluetooth/: BluetoothConnectListener.java  BluetoothDevicesManager.java
app/src/main/java/com/example/ShikeApplication/bluetooth/interfaces/: IBTBoudListener.java  IBTConnectListener.java  IBTScanListener.java  IBTStateListener.java  IBluetoothInterface.java  IBluetoothInterfaceCoustom.java
app/src/main/java/com/example/ShikeApplication/carmera/: CameraPreview.java  CameraStatus.java  CameraSurfaceView.java  CarmeraHelper.kt  DisplayCameraPreview.java  HomeViewMode.java  IFramePreviewInterface.java  cameraPreview.java
app/src/main/java/com/example/ShikeApplication/carmera/utils/: BitmapUtils.java  MediaUtil.java  MetricsUtil.java  SwitchUtil.java  Utils.java
app/src/main/java/com/example/ShikeApplication/fragment/: HomeFragment.java  MediaFragment.java  NPlayerFragment.kt  NativeRenderFragment.java
app/src/main/java/com/example/ShikeApplication/mediaSmaple/imagePaint/: CustomView.java  ImagePaint.java  surfaceViewDraw.java
app/src/main/java/com/example/ShikeApplication/mediacodec/: AuidoRawChannelBuffer.java  EncoderTypicalMode.java  MediaConstant.java  MediaUtil.java  VideoDecoder.java  VideoEncoder.java
app/src/main/java/com/example/ShikeApplication/ndkdemo/: ndktool.java
app/src/main/java/com/example/ShikeApplication/ndkdemo/CallbackInterface/: JavaNdkListener.java  ThreadErrorListener.java
app/src/main/java/com/example/ShikeApplication/opengl/: GLELRender.java  GLSLPlayer.java  GLSLSurfaceView.java  OpenGlElPlayer.java  OpenGlElRender.java  OpenGlElSurfaceView.java
app/src/main/java/com/example/ShikeApplication/opengl/demo/: GLELSurfaceRender.java  GLELSurfaceView.java  OpenGlSurfaceProxy.java  VideoDisplayGL.java
app/src/main/java/com/example/ShikeApplication/opengl/render/: GLRecoder.java  GLUtil.java  ScreenRectangle.java  VideoEncoderCore.java  VideoThread.java  WindowSurface.java
app/src/main/java/com/example/ShikeApplication/opengl/threedimensionalrender/: GLRecoder.java  GLUtil.java  ScreenRectangle.java  Shape.java  ShapeView.java  VideoEncoderCore.java  VideoThread.java  WindowSurface.java
app/src/main/java/com/example/ShikeApplication/service/: CameraServer.java  IUVCService.java  IUVCServiceCallback.java  IUVCServiceOnFrameAvailable.java  IUVCSlaveService.java  UVCService.java
app/src/main/java/com/example/ShikeApplication/usbotg/: UsbOTGManager.java
app/src/main/java/com/example/ShikeApplication/utils/: AssetsUtil.java  BitmapUtils.java  CameraTwoUtils.java  CameraUtil.java  HardwareSwitchUtil.java  JfShaderUtil.java  MetricsUtil.java  RenderShaderUtil.java  SharedPreferencesUtil.java
app/src/main/java/com/example/ShikeApplication/view/: MeasureScreenSizeLayout.java  PullDownDumperLayout.java
app/src/main/jni/: Android.mk  CMakeLists.txt  MainConnrotNativeThread.c  MainConnrotNativeThread.cpp  NativeLibraryVersionName.cpp  com_example_ShikeApplication_ndkdemo_ndktool.h
app/src/main/jni/ThreadDemo/: AndroidLog.h  JavaListener.cpp  JavaListener.h  native-lib.cpp
app/src/main/res/anim/: rotate_anim.xml  zoom_in.xml  zoom_out.xml
app/src/main/res/drawable/: ic_button_select_bg.xml  privacy_policy_background_shape.xml  tab_nav_ic_button_select.xml
app/src/main/res/drawable-anydpi/: ic_drawer_layout_demo.xml
app/src/main/res/layout/: activity_base.xml  activity_flash_linear_layout.xml  activity_main.xml  activity_main_temp.xml  activity_opengles_smaple.xml  activity_remota.xml  activity_resound.xml  activity_splash.xml  activity_video_play.xml  activity_yuv_image.xml  fragment_home.xml  fragment_media.xml  fragment_native_demo.xml  fragment_native_player.xml  fragment_nativerendler.xml  privacy_policy_background_dialog.xml
app/src/main/res/raw/: privacypolicy.txt
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: .gitignore  build.gradle
ijkplayer-arm64/: build.gradle
ijkplayer-arm64/src/main/: AndroidManifest.xml
ijkplayer-armv7a/: .gitignore
ijkplayer-example/: build.gradle
libuvccamera/: build.gradle
obj2opengles/: build.gradle
usbCameraCommon/: build.gradle
(+49 files in other folders)
